--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
       "stopAtEntry": false,
       "serverReadyAction": {
         "action": "openExternally",
-        "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
+        "uriFormat": "%s/webhook/v1?key=77aae8aa-50d2-49d9-be8c-e9f59aaf39e9&script=test-script.py"
       },
       "env": {
         "ASPNETCORE_ENVIRONMENT": "Development"
