--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Build
       run: |
         dotnet build --no-restore
-        dotnet publish -c Release -o ../webhookshell
+        dotnet publish -c Release
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v2
       with:
         name: Artifact
-        path: ../webhookshell
+        path: ./webhookshell
 
