--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,8 +25,8 @@ jobs:
         dotnet build --no-restore
         dotnet publish -c Release
     - name: Upload Build Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: Artifact
-        path: ./webhookshell
+        path: /home/runner/work/webhookshell/webhookshell/bin/Release/net6.0/publish/
 
