fix type in workflow

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Download Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/download-artifact@v3
       with:
         name: Artifact
     - name: Create a release
