--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,9 +34,19 @@ jobs:
       with:
         name: Artifact
     - name: Create a release
+      id: new-release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.run_number }}
         release_name: Release ${{ github.run_number}}
+    - name: Upload Artifact
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.new-release.outputs.upload_url }}
+        asset_path: ./artifact.zip
+        asset_name: WebhookShell-${{ github.run_number }}.zip
+        asset_content_type: application/zip
