--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,6 +47,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.new-release.outputs.upload_url }}
-        asset_path: ./artifact
+        asset_path: /home/runner/work/webhookshell/webhookshell/artifact.zip
         asset_name: WebhookShell-${{ github.run_number }}.zip
         asset_content_type: application/zip
