--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,11 +19,13 @@ jobs:
       run: |
         dotnet build --no-restore
         dotnet publish -c Release
+    - name: Zip Artifact
+      run: tar -cvf artifact.zip /home/runner/work/webhookshell/webhookshell/bin/Release/net6.0/publish/
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
       with:
         name: artifact
-        path: /home/runner/work/webhookshell/webhookshell/bin/Release/net6.0/publish/
+        path: /home/runner/work/webhookshell/webhookshell/bin/Release/net6.0/publish/artifact.zip
 
   release:
     needs: build
@@ -47,6 +49,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.new-release.outputs.upload_url }}
-        asset_path: /home/runner/work/webhookshell/webhookshell
+        asset_path: /home/runner/work/webhookshell/artifact.zip
         asset_name: WebhookShell-${{ github.run_number }}.zip
         asset_content_type: application/zip
