--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -63,7 +63,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ inputs.version-tag }}
+        tag_name: ${{ inputs.runtime-name }}-${{ inputs.version-tag }}
         release_name: Release ${{ github.run_number}}
     - name: Upload Artifact
       uses: actions/upload-release-asset@v1
