--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -65,7 +65,7 @@ jobs:
       with:
         tag_name: ${{ inputs.runtime-name }}-${{ inputs.version-tag }}
         release_name: Release ${{ github.run_number}}
-    - name: Upload Artifact
+    - name: Upload Release
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
