--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ on:
 # For Example:
 # 1. Release 5 (for linux x64)
 # 2. Release 5 (for windows x64)
-# This needs to fixed. Only one release should be created at the pipeline run, and that release should include all artifacts (windows, linux, etc)
+# This needs to be fixed. Only one release should be created at the pipeline run, and that release should include all artifacts (windows, linux, etc)
 jobs:
   framework-specific:
     name: Build and Release Framework-Dependent Package
     uses: ./.github/workflows/dotnet.yml
     with:
-      version-tag: ${{ github.run_number }}
+      version-tag: ${{ github.run_number }} Framework-Dependent
 
   linux-x64:
     name: Build and Release for linux x64
@@ -22,7 +22,7 @@ jobs:
     with:
       runtime-name: linux-x64
       runtime-configuration: --runtime linux-x64
-      version-tag: ${{ github.run_number }}
+      version-tag: ${{ github.run_number }} For linux
 
   rhel-x64:
     name: Build and Release for RHEL x64
@@ -30,7 +30,7 @@ jobs:
     with:
       runtime-name: rhel-x64
       runtime-configuration: --runtime rhel-x64
-      version-tag: ${{ github.run_number }}
+      version-tag: ${{ github.run_number }} for RedHat
 
   windows-x64:
     name: Build and Release for Windows x64
@@ -38,4 +38,4 @@ jobs:
     with:
       runtime-name: win-x64
       runtime-configuration: --runtime win-x64
-      version-tag: ${{ github.run_id }}
+      version-tag: ${{ github.run_id }} for Windows
