--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,7 +45,7 @@ jobs:
         else
             folder="${{ inputs.runtime-name }}"
         fi
-        tar -C /home/runner/work/webhookshell/webhookshell/bin/Release/net6.0/$folder/ -cvf $ARTIFACT_FILE_NAME .
+        tar -C /home/runner/work/webhookshell/webhookshell/bin/Release/net6.0/$folder/publish -cvf $ARTIFACT_FILE_NAME .
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
       with:
