reread options everytime when appsetting changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,7 @@
         "ProcessName": "pwsh",
         "ScriptsLocation": "./scripts/powershell",
         "FileExtension": "ps1",
-        "Key": "aaa"
+        "Key": "18adecad-df09-47e2-ae05-de7686ae3156"
       },
       {
         "ProcessName": "python3",
