--- a/appsettings.json
+++ b/appsettings.json
@@ -9,20 +9,26 @@
   "AllowedHosts": "*",
   "Scripts": {
     "DefaultKey": "24ffc5be-7dd8-479f-898e-27169bf23e7f",
+    "ScriptsByKey": {
+      "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9": {
+        "Script": "test-script.py",
+        "HandlerProcessExtension": "py"
+      }
+    },
     "Handlers": [
       {
         "ProcessName": "pwsh",
         "ScriptsLocation": "./scripts/powershell",
         "FileExtension": "ps1",
-        "Key": "18adecad-df09-47e2-ae05-de7686ae3156"
+        "Key": "18adecad-df09-47e2-ae05-de7686ae3156",
+        "KeysMapping": {
+          "Test-Script.ps1": "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9"
+        }
       },
       {
         "ProcessName": "python3",
         "ScriptsLocation": "./scripts/python",
-        "FileExtension": "py",
-        "KeysMapping": {
-          "test-script.py": "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9"
-        }
+        "FileExtension": "py"
       }
     ]
   }
