remove extension from scriptByKey prop

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,10 +10,7 @@
   "Scripts": {
     "DefaultKey": "24ffc5be-7dd8-479f-898e-27169bf23e7f",
     "ScriptsByKey": {
-      "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9": {
-        "Script": "test-script.py",
-        "HandlerProcessExtension": "py"
-      }
+      "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9": "test-script.py"
     },
     "Handlers": [
       {
