--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -20,9 +20,19 @@
         "ProcessName": "python3",
         "ScriptsLocation": "./scripts/python",
         "FileExtension": "py",
-        "KeysMapping": {
-          "test-script.py": "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9"
-        }
+        "ScriptsMapping": [
+          {
+            "name": "test-script.py",
+            "key": "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9",
+            "trigger": {
+              "httpMethod": "GET",
+              "ipAddresses": [
+                "127.0.0.1",
+                "::1"
+              ]
+            }
+          }
+        ]
       }
     ]
   }
