--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
-      "program": "${workspaceFolder}/bin/Debug/net6.0/webhookshell.dll",
+      "program": "${workspaceFolder}/src/bin/Debug/net6.0/Webhookshell.dll",
       "args": [],
-      "cwd": "${workspaceFolder}",
+      "cwd": "${workspaceFolder}/src",
       "stopAtEntry": false,
       "serverReadyAction": {
         "action": "openExternally",
