--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -29,7 +29,11 @@
               "ipAddresses": [
                 "127.0.0.1",
                 "::1"
-              ]
+              ],
+              "timeFrame": {
+                "startUtc": "00:00:00",
+                "endUtc": "23:59:59"
+              }
             }
           }
         ]
