--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -30,10 +30,13 @@
                 "127.0.0.1",
                 "::1"
               ],
-              "timeFrame": {
-                "startUtc": "00:00:00",
-                "endUtc": "23:59:59"
-              }
+              "timeFrames": 
+              [
+                {
+                  "startUtc": "00:00:00",
+                  "endUtc": "23:59:59"
+                }
+              ]
             }
           }
         ]
