--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,46 +1,53 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
-  "Scripts": {
-    "DefaultKey": "24ffc5be-7dd8-479f-898e-27169bf23e7f",
-    "Handlers": [
-      {
-        "ProcessName": "pwsh",
-        "ScriptsLocation": "./scripts/powershell",
-        "FileExtension": "ps1",
-        "Key": "18adecad-df09-47e2-ae05-de7686ae3156"
-      },
-      {
-        "ProcessName": "python3",
-        "ScriptsLocation": "./scripts/python",
-        "FileExtension": "py",
-        "ScriptsMapping": [
-          {
-            "name": "test-script.py",
-            "key": "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9",
-            "trigger": {
-              "httpMethod": "GET",
-              "ipAddresses": [
-                "127.0.0.1",
-                "::1"
-              ],
-              "timeFrames": 
-              [
-                {
-                  "startUtc": "00:00:00",
-                  "endUtc": "23:59:59"
-                }
-              ]
-            }
-          }
-        ]
-      }
-    ]
-  }
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*",
+	"Scripts": {
+		"DefaultKey": "24ffc5be-7dd8-479f-898e-27169bf23e7f",
+		"Handlers": [
+			{
+				"ProcessName": "pwsh",
+				"ScriptsLocation": "./scripts/powershell",
+				"FileExtension": "ps1",
+				"Key": "18adecad-df09-47e2-ae05-de7686ae3156",
+				"ScriptsMapping": [
+					{
+						"name": "Test-Script.ps1",
+						"key": "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9",
+						"trigger": {
+							"httpMethods": ["POST"]
+						}
+					}
+				]
+			},
+			{
+				"ProcessName": "python3",
+				"ScriptsLocation": "./scripts/python",
+				"FileExtension": "py",
+				"ScriptsMapping": [
+					{
+						"name": "test-script.py",
+						"key": "77aae8aa-50d2-49d9-be8c-e9f59aaf39e9",
+						"trigger": {
+							"httpMethods": [
+								"POST",
+								"GET"
+							],
+							"timeFrames": [
+								{
+									"startUtc": "00:00:00",
+									"endUtc": "23:59:59"
+								}
+							]
+						}
+					}
+				]
+			}
+		]
+	}
 }
