Update GitHub Actions workflow to include .github directory in paths

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,8 @@ on:
     branches: [ "master" ]
     paths:
       - src/*
+      - .github/*
 
-# TODO: Currently all jobs will create a different releases with the same name
-# For Example:
-# 1. Release 5 (for linux x64)
-# 2. Release 5 (for windows x64)
-# This needs to be fixed. Only one release should be created at the pipeline run, and that release should include all artifacts (windows, linux, etc)
 jobs:
   docker-build-and-push:
     name: Build and Push Docker Image
