Update GitHub Actions workflow to include main.yml in paths

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches: [ "master" ]
     paths:
-      - src/*
-      - .github/*
-
+      - 'src/*'
+      - '**/main.yml'
 jobs:
   docker-build-and-push:
     name: Build and Push Docker Image
