--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -25,4 +22,4 @@ jobs:
 
       - name: Build and push
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t mtokarevv/webhookshell:latest --push .
+          docker build --platform linux/amd64 -t mtokarevv/webhookshell:latest --push .
